tutfincludedir = $(includedir)/Tutf

tutfinclude_HEADERS = Tutf.h Tutf_defs.h Tutftypes.h ascii.h compiler.h \
  cp437.h cp737.h cp775.h cp850.h cp852.h cp855.h cp857.h cp860.h cp861.h cp862.h cp863.h cp864.h cp865.h cp866.h cp869.h cp874.h \
  cp1250.h cp1251.h cp1252.h cp1253.h cp1254.h cp1255.h cp1256.h cp1257.h cp1258.h \
  iso_8859_1.h iso_8859_2.h iso_8859_3.h iso_8859_4.h iso_8859_5.h iso_8859_6.h iso_8859_7.h iso_8859_8.h iso_8859_9.h \
  iso_8859_10.h iso_8859_13.h iso_8859_14.h iso_8859_15.h iso_8859_16.h \
  utf_16.h version.h
