tutfincludedir = $(includedir)/Tutf

tutfinclude_HEADERS = adobe_stdenc.h adobe_symbol.h apl_iso_ir_68.h \
    ascii.h atarist.h compiler.h cp1006.h cp1250.h cp1251.h cp1252.h \
    cp1253.h cp1254.h cp1255.h cp1256.h cp1257.h cp1258.h cp424.h cp437.h \
    cp737.h cp775.h cp850.h cp852.h cp855.h cp856.h cp857.h cp860.h \
    cp861.h cp862.h cp863.h cp864.h cp865.h cp866.h cp869.h cp874.h \
    cp932.h cp936.h cp949.h cp950.h hp_roman8.h inprogress.h iso8859_10.h \
    iso8859_11.h iso8859_13.h iso8859_14.h iso8859_15.h iso8859_16.h \
    iso8859_1.h iso8859_2.h iso8859_3.h iso8859_4.h iso8859_5.h \
    iso8859_6.h iso8859_7.h iso8859_8.h iso8859_9.h jisx0201.h koi8_r.h \
    koi8_u.h kz1048.h mac_arabic.h mac_celtic.h mac_centraleurope.h \
    mac_croatian.h mac_cyrillic.h mac_devanagari.h mac_dingbats.h \
    mac_farsi.h mac_gaelic.h mac_greek.h mac_gujarati.h mac_gurmukhi.h \
    mac_hebrew.h mac_icelandic.h mac_inuit.h mac_roman.h mac_romanian.h \
    mac_symbol.h mac_thai.h mac_turkish.h ms_mac_cyrillic.h ms_mac_greek.h \
    ms_mac_icelandic.h ms_mac_latin2.h ms_mac_roman.h ms_mac_turkish.h \
    nextstep.h Tutf_defs.h Tutf.h Tutftypes.h utf_16_aux.h utf_16.h \
    version.h vt100gr.h
