twincludedir = $(includedir)/Tw

twinclude_HEADERS = \
  Tw++.h Tw.h Tw1.h Tw_defs.h Twavl.h Twerrno.h Twkeys.h Twstat.h Twstat_defs.h Twtypes.h \
  alias1_m4.h alias_m4.h autoconf.h common1_m4.h common_m4.h compiler.h datasizes.h datatypes.h \
  missing.h mouse.h osincludes.h pagesize.h prefix.h proto1_m4.h proto_m4.h stattypes.h \
  unprefix.h version.h 
