twincludedir = $(includedir)/Tw

twinclude_HEADERS = \
  Tw++.h Tw.h Tw1.h Tw_defs.h Twavl.h Twerrno.h Twkeys.h Twstat.h Twstat_defs.h Twtypes.h \
  alias1.h alias.h autoconf.h common1_gen.h common_gen.h compiler.h datasizes.h datatypes.h \
  missing.h mouse.h osincludes.h pagesize.h prefix.h proto1_gen.h proto_gen.h stattypes.h \
  unprefix.h version.h
